SAK-19412
git-svn-id: https://source.sakaiproject.org/svn/osp/branches/sakai-2.8.x@85788 66ffb92e-73f9-0310-93c1-f5514f145a0a