@@ -69,54 +69,54 @@ public class MatrixAuthorizer implements ApplicationAuthorizer {
       
       if (MatrixFunctionConstants.EVALUATE_MATRIX.equals(function) ||
             MatrixFunctionConstants.REVIEW_MATRIX.equals(function)) {
-         return new Boolean(facade.isAuthorized(function,id));
+         return Boolean.valueOf(facade.isAuthorized(function,id));
       }
       else if (MatrixFunctionConstants.DELETE_SCAFFOLDING_ANY.equals(function)) {
     	  Scaffolding scaffolding = getMatrixManager().getScaffolding(id);
     	  if (scaffolding == null)
-    		  return new Boolean(facade.isAuthorized(agent,function,id));
+    		  return Boolean.valueOf(facade.isAuthorized(agent,function,id));
 
     	  if (!scaffolding.isPublished() && (scaffolding.getOwner().equals(agent)) || 
     			  facade.isAuthorized(agent,function,scaffolding.getWorksiteId()))
-    		  return new Boolean(true);
+    		  return Boolean.valueOf(true);
       }else if(MatrixFunctionConstants.DELETE_SCAFFOLDING_OWN.equals(function)) {
     	  Scaffolding scaffolding = getMatrixManager().getScaffolding(id);
     	  if (scaffolding == null)
-    		  return new Boolean(facade.isAuthorized(agent,function,id));
+    		  return Boolean.valueOf(facade.isAuthorized(agent,function,id));
 
     	  if(scaffolding.getOwner().equals(agent)){
     		  if (!scaffolding.isPublished() || 
     				  facade.isAuthorized(agent,function,scaffolding.getWorksiteId()))
-    			  return new Boolean(true);
+    			  return Boolean.valueOf(true);
     	  }
       }
       else if (ContentHostingService.EVENT_RESOURCE_READ.equals(function)) {
          return isFileAuth(facade, agent, id);
       }
       else if (function.equals(MatrixFunctionConstants.CREATE_SCAFFOLDING)) {
-         return new Boolean(facade.isAuthorized(agent,function,id));
+         return Boolean.valueOf(facade.isAuthorized(agent,function,id));
       }
       else if (function.equals(MatrixFunctionConstants.REVISE_SCAFFOLDING_ANY)) {
-         return new Boolean(facade.isAuthorized(agent,function,id));
+         return Boolean.valueOf(facade.isAuthorized(agent,function,id));
       }else if(function.equals(MatrixFunctionConstants.REVISE_SCAFFOLDING_OWN)) {
     	  Scaffolding scaffolding = getMatrixManager().getScaffolding(id);
     	  if (scaffolding == null)
-    		  return new Boolean(facade.isAuthorized(agent,function,id));
+    		  return Boolean.valueOf(facade.isAuthorized(agent,function,id));
 
     	  if(scaffolding.getOwner().equals(agent)){
-    		  return new Boolean(facade.isAuthorized(agent,function,id));
+    		  return Boolean.valueOf(facade.isAuthorized(agent,function,id));
     	  }
       }
       else if (function.equals(MatrixFunctionConstants.EXPORT_SCAFFOLDING_ANY)) {
-         return new Boolean(facade.isAuthorized(agent,function,id));
+         return Boolean.valueOf(facade.isAuthorized(agent,function,id));
       }
       else if (function.equals(MatrixFunctionConstants.EXPORT_SCAFFOLDING_OWN)) {
     	  Scaffolding scaffolding = getMatrixManager().getScaffolding(id);
     	  if (scaffolding == null)
-    		  return new Boolean(facade.isAuthorized(agent,function,id));
+    		  return Boolean.valueOf(facade.isAuthorized(agent,function,id));
 
     	  if(scaffolding.getOwner().equals(agent)){
-    		  return new Boolean(facade.isAuthorized(agent,function,id));
+    		  return Boolean.valueOf(facade.isAuthorized(agent,function,id));
     	  }
        }
       else if (function.equals(MatrixFunctionConstants.VIEW_SCAFFOLDING_GUIDANCE)) {
@@ -128,7 +128,7 @@ public class MatrixAuthorizer implements ApplicationAuthorizer {
          if (sCell != null) {
             owner = sCell.getScaffolding().getOwner();
          }
-         return new Boolean(agent.equals(owner));
+         return Boolean.valueOf(agent.equals(owner));
       }
       else if (function.equals(MatrixFunctionConstants.EVALUATE_SPECIFIC_MATRIXCELL)) {
          WizardPage page = getMatrixManager().getWizardPage(id);
@@ -136,7 +136,7 @@ public class MatrixAuthorizer implements ApplicationAuthorizer {
 //       make sure that the target site gets tested
          
          facade.pushAuthzGroups(siteId.getValue());
-         return new Boolean(facade.isAuthorized(agent, MatrixFunctionConstants.EVALUATE_MATRIX, siteId));
+         return Boolean.valueOf(facade.isAuthorized(agent, MatrixFunctionConstants.EVALUATE_MATRIX, siteId));
       }
       else if (function.equals(MatrixFunctionConstants.ACCESS_ALL_CELLS) ||
     		  function.equals(MatrixFunctionConstants.VIEW_EVAL_OTHER) ||
@@ -145,8 +145,8 @@ public class MatrixAuthorizer implements ApplicationAuthorizer {
     		  function.equals(MatrixFunctionConstants.ACCESS_USERLIST) ||
     		  function.equals(MatrixFunctionConstants.VIEW_ALL_GROUPS) ||
     		  function.equals(MatrixFunctionConstants.CAN_USE_SCAFFOLDING)) {
-    	  return new Boolean(SecurityService.unlock(agent.getId().getValue(),function,id.getValue()));
-    	  //return new Boolean(getExplicitAuthz().isAuthorized(agent,function,id));
+    	  return Boolean.valueOf(SecurityService.unlock(agent.getId().getValue(),function,id.getValue()));
+    	  //return Boolean.valueOf(getExplicitAuthz().isAuthorized(agent,function,id));
       }
             
       return null;  //don't care
@@ -164,7 +164,7 @@ public class MatrixAuthorizer implements ApplicationAuthorizer {
    public Boolean isFileAuth(AuthorizationFacade facade, Agent agent, Id artifactId) {
       // check if this id is attached to any cell
       if (artifactId == null)
-         return new Boolean(true);
+         return Boolean.valueOf(true);
 
       List cells = getMatrixManager().getCellsByArtifact(artifactId);
 
@@ -178,7 +178,7 @@ public class MatrixAuthorizer implements ApplicationAuthorizer {
     		  (sCell.isDefaultReviewers() && getExplicitAuthz().isAuthorized(agent, MatrixFunctionConstants.EVALUATE_MATRIX, sCell.getScaffolding().getId())) ||
     		  (!sCell.isDefaultReviewers() && getExplicitAuthz().isAuthorized(agent, MatrixFunctionConstants.EVALUATE_MATRIX, sCell.getId())) ||
     		  (getExplicitAuthz().isAuthorized(agent, MatrixFunctionConstants.ACCESS_ALL_CELLS, getIdManager().getId(sCell.getScaffolding().getReference())))){
-    	  return new Boolean(true);
+    	  return Boolean.valueOf(true);
       }
 
       return null;
