@@ -86,7 +86,7 @@ public class ImportScaffoldingController implements Controller, FormController {
          
          session.put(FilePickerHelper.FILE_PICKER_RESOURCE_FILTER, 
                ComponentManager.get("org.sakaiproject.content.api.ContentResourceFilter.scaffoldingImportFile"));
-         session.put(FilePickerHelper.FILE_PICKER_MAX_ATTACHMENTS, new Integer(1));
+         session.put(FilePickerHelper.FILE_PICKER_MAX_ATTACHMENTS, Integer.valueOf(1));
          return new ModelAndView("filePicker");
       }
       
