@@ -125,7 +125,7 @@ public class SubmitCellConfirmationController implements LoadObjectController, C
 			//    So the current step needs to be rolled back
 			Object stepObj = (Object) session.get(WizardPageHelper.SEQUENTIAL_WIZARD_CURRENT_STEP);
 			if (stepObj != null && stepObj instanceof Integer && !isLast(session)) {
-				session.put(WizardPageHelper.SEQUENTIAL_WIZARD_CURRENT_STEP, new Integer(((Integer)stepObj).intValue() - 1) );
+				session.put(WizardPageHelper.SEQUENTIAL_WIZARD_CURRENT_STEP, Integer.valueOf(((Integer)stepObj).intValue() - 1) );
 			}
 			return new ModelAndView(view, "page_id", page.getId().getValue());
 		}
